--- a/flaskr/templates/articoli.html
+++ b/flaskr/templates/articoli.html
@@ -22,7 +22,7 @@
       <a class="btn btn-danger" href="">Elimina</a>
     </div>
     <div class="col-md-2">
-      <a class="btn btn-primary" href="{{url_for('articolo', ddtnum=ddtnum, artnum=art['id'])}}">Modifica</a>
+      <a class="btn btn-primary" href="{{url_for('articolo', ddtnum=ddtnum, artnum=art['CEARID'])}}">Modifica</a>
     </div>
   </div>
   {% endfor %}
