--- a/flaskr/templates/articolo_view.html
+++ b/flaskr/templates/articolo_view.html
@@ -1,5 +1,8 @@
 {% extends "layout/father.html" %}
 {% block content %}
+{% if err_apporto_mancante and can_saldatura %}
+<h3 style="color:red">Questo articolo è stato lavorato con saldatura, e richiede l'imissione di almeno un materiale di apporto; perfavore inseriscine uno. Se pensi che sia un errore, controlla i campi e correggi.</h3>
+{% endif %}
 <a class="btn btn-info mt-3" href="{{url_for('articoli', ddtnum=ddtnum)}}">Torna indietro</a>
 <div class="row p-3">
 
@@ -85,29 +88,25 @@
     <h1>Materiali di origine</h1>
     <div id="aggiunta-materiali row">
         <select class="form-select" aria-label="Default select example" id="new_materiale">
-
             <option value="certificato-collaudo">Materiale con certificato di collaudo</option>
             <option value="conto-lavorazione">Materiale in conto lavorazione</option>
-            {% if can_saldatura %}
-            <option value="materiale-apporto">Materiale d'origine d'apporto</option>
-            {% endif %}
         </select>
     </div>
 
     <div id="form-conto-lavorazione" class="row">
         <form method="post"
             action="{{url_for('add_materiale_conto_lavorazione', ddtnum=ddtnum, artnum=artnum, matnum=0)}}">
-            
+
             <div class="border rounder m-3 p-3">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="inputGroup-sizing-default">Tipo di materiale</span>
-            <select class="form-select" aria-label="Default select example" id="tipoMateriale">
-                {% if can_saldatura %}
-                <option value="A">Materiale d'apporto</option>
-                {% endif %}
-                <option value="B">Materiale di base</option>
-              </select>
-            </div>
+                    <select class="form-select" name="tipoMateriale" id="tipoMateriale">
+                        {% if can_saldatura %}
+                        <option value="A">Materiale d'apporto</option>
+                        {% endif %}
+                        <option value="B">Materiale di base</option>
+                    </select>
+                </div>
 
 
                 <div class="input-group mb-3">
@@ -138,16 +137,25 @@
 
     <div id="form-certificato-collaudo" class="row">
         <form method="post" action="{{ url_for('add_materiale_collaudo', ddtnum = ddtnum, artnum= artnum, matnum=0) }}">
-        
-                <div class="border rounder m-3 p-3">
-                    <div class="input-group mb-3">
-                        <span class="input-group-text" id="inputGroup-sizing-default">Tipo di materiale</span>
-                <select class="form-select" aria-label="Default select example" id="tipoMateriale">
-                    {% if can_saldatura %}
-                    <option value="A">Materiale d'apporto</option>
-                    {% endif %}
-                    <option value="B">Materiale di base</option>
-                  </select>
+
+            <div class="border rounder m-3 p-3">
+
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" name="dop" id="dop">
+                    <label class="form-check-label" for="flexCheckDefault">
+                        Possiedo la DOP
+                    </label>
+                </div>
+
+
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="inputGroup-sizing-default">Tipo di materiale</span>
+                    <select class="form-select" name="tipoMateriale2" id="tipoMateriale2">
+                        {% if can_saldatura %}
+                        <option value="A">Materiale d'apporto</option>
+                        {% endif %}
+                        <option value="B">Materiale di base</option>
+                    </select>
                 </div>
 
                 <div class="input-group mb-3">
@@ -159,8 +167,10 @@
 
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="inputGroup-sizing-default">Data</span>
-                    <input type="text" class="form-control" aria-label="Sizing example input"
-                        aria-describedby="inputGroup-sizing-default" id="dataCertificato" name="dataCertificato">
+                    <input type="date" class="form-control" aria-label="Sizing example input"
+                        pattern="\d{4}-\d{2}-\d{2}" aria-describedby="inputGroup-sizing-default" id="dataCertificato"
+                        name="dataCertificato">
+
                 </div>
 
                 <div class="row">
@@ -196,7 +206,7 @@
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text" id="inputGroup-sizing-default">Data</span>
-            <input type="text" class="form-control" aria-label="Sizing example input"
+            <input type="date" class="form-control" aria-label="Sizing example input"
                 aria-describedby="inputGroup-sizing-default">
         </div>
         <div class="input-group mb-3">
@@ -209,15 +219,15 @@
 </div>
 {% endblock %}
 {% block js %}
-
+<script src="dist/js/datepicker.min.js"></script>
+<script src="dist/js/locales/fr.min.js"></script>
 <script>
     function hideFormMateriale() {
         if ($("#new_materiale").val() == "certificato-collaudo") {
             console.log("form certificato di collaudo")
             $("#form-certificato-collaudo").removeClass("d-none");
             $("#form-conto-lavorazione").addClass("d-none");
-        }
-        else{
+        } else {
             console.log("form conto lavorazione")
             $("#form-certificato-collaudo").addClass("d-none");
             $("#form-conto-lavorazione").removeClass("d-none");
@@ -234,6 +244,7 @@
     }
 
     window.onload = function () {
+
         hideFormMateriale();
         wipe();
     }
